# hackathon-datacenter-agent

./: .gitignore  AGENTS.md  PLAN.md  README.md  SKILL.md  classifier.py  conftest.py  log_config.json  pyproject.toml  pytest.ini  requirements.txt  self_improver.py  simulator.py
backend/: agent.py  classifier.py  dataset.py  loader.py  memory.py  sim.py  stream.py  tools.py
backend/dashboard/: index.html
backend/dashboard/assets/: index-Bt0Zmpop.css  index-BwA4ZJBH.css  index-CIcw8m3c.js  index-ChhzAUrg.js  index-DPXfmktJ.css  index-DQAQZC1v.js  index-Dl3hBj9n.js
backend/dashboard/fixtures/: incidents.json
backend/dashboard/fixtures/telemetry/: INC-002.json  INC-003.json  INC-007.json
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  shot.mjs  verify.mjs  vite.config.ts
dashboard/public/fixtures/: agentRuns.json  fleet.json  meta.json
dashboard/public/fixtures/telemetry/: INC-001.json  INC-002.json  INC-004.json  INC-005.json
dashboard/src/: App.tsx  app.css  data.ts  main.tsx  theme.css  types.ts
dashboard/src/components/: AgentTriage.tsx  ComputerUse.tsx  FleetHeatmap.tsx  IncidentFeed.tsx  LearningCurve.tsx  ProvenanceBadge.tsx  SelfImprovement.tsx  TelemetryStrip.tsx  TopBar.tsx
dashboard/src/lib/: replay.ts
demo/: basic_test.py  main_loop_demo.py
docs/: DATA.md  FAILURE_ANALYSIS.md  TEAM_GUIDE.md  data-findings.md  early-detection-eval.md  early_detection_eval.json  incident-aug17-0600-analysis.py  incident-aug17-0600.md  learning_curve.json  learning_curve_demo.md  xid-characterization.md  xid_characterization.json
docs/superpowers/plans/: 2026-06-27-gpu-oncall-rca-agent.md  2026-06-27-self-improving-failure-predictor.md
docs/superpowers/specs/: 2026-06-27-self-improving-failure-predictor-design.md
scraps/: AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  SKILL.md  main_loop.py  self_improver.py
scripts/: agent_loop.py  analyze_failures.py  build_dashboard_substrate.py  build_early_dataset.py  build_monitor_fixture.py  characterize_xid.py  download_datasets.sh  eval_early_dataset.py  eval_harness.py  learning_curve_demo.py  lfs_helper.py  make_mock_jobs.py  monitor.py  precompute_features.py  validate_kalos.py  validate_rca.py
src/: sim.py
src/dashboard/: index.html
src/gpusitter/agent/: agent.py  incident.py  memory.py  priors.py  tools.py
src/gpusitter/app/: computer_use.py  dashboard_substrate.py  monitor_fixture.py  sim.py
src/gpusitter/app/dashboard/: index.html
src/gpusitter/app/dashboard/assets/: index-6ql5p_FI.css  index-BFHyYmh1.css  index-BTx496ON.js  index-BUUFB4Ty.js  index-BVlARxRe.css  index-BfRxU5Dw.css  index-Bk8jyYK9.css  index-BnncqdVP.css  index-Bvpo590t.css  index-C1r4HSm5.js  index-C7Z0ZRjn.css  index-CfJi0yG_.js  index-CsnkgKSQ.js  index-Cuh56KTL.js  index-D1XVQCvV.js  index-D3Mbo-K-.js  index-DDaTjAGG.css  index-DYsKM4oV.js  index-D_lnkBOE.css  index-Dlab4j9I.js  index-DpZ3IXB9.js  index-DsulQbHs.js  index-HFN1-fuu.js  index-Hl1d_4Me.js  index-ZYNjSUez.js  index-cId_5rrF.js  index-fhHnvtjH.js  index-vXpaKruN.css
src/gpusitter/app/dashboard/fixtures/: fleet.json  incidents.json
src/gpusitter/detection/: agent_loop.py  baseline.py  classifier.py  dataset.py  early_dataset.py  harness.py  monitor.py  stream.py
src/gpusitter/domain/: models.py
src/gpusitter/rca/: job_join.py
src/gpusitter/telemetry/: ingest.py  normalize.py  sources.py  store.py  timeparse.py  window.py
tests/: test_agent.py  test_agent_loop.py  test_baseline.py  test_characterize_xid.py  test_classifier.py  test_dashboard_fixtures.py  test_dashboard_substrate.py  test_dataset.py  test_early_dataset.py  test_eval_early_dataset.py  test_eval_harness_cli.py  test_harness.py  test_incident.py  test_learning_curve_demo.py  test_lfs_helper.py  test_loader.py  test_loader_port.py  test_memory.py  test_monitor.py  test_monitor_fixture.py  test_precompute.py  test_sim.py  test_smoke.py  test_stream.py  test_timestamp_seam.py  test_tools.py  test_tools_ml.py  test_validate_scripts.py
tests/rca/: test_job_join.py
tests/telemetry/: conftest.py  test_ingest.py  test_normalize.py  test_sources.py  test_store.py
(+27 files in other folders)
