[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpusitter"
version = "0.1.0"
description = "GPUSitter — on-call RCA agent for GPU fleets (real-telemetry grounded)"
requires-python = ">=3.13"
dependencies = [
    "pandas==3.0.3",
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "google-adk==2.3.0",
    "google-genai==2.10.0",
    "httpx==0.28.1",
    "scikit-learn==1.9.0",
]

# uv-native dev group: installed by default on `uv sync` (unlike an optional
# extra), so the bare `pytest` console script is present.
[dependency-groups]
dev = ["pytest==9.1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/gpusitter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# gpusitter resolves via the (editable) install; repo root on the path lets the
# tests import the repo-level `scripts` package (lfs_helper, precompute) under
# the bare `pytest` console script, not only `python -m pytest`.
pythonpath = ["."]
filterwarnings = [
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
