[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpusitter"
version = "0.1.0"
description = "GPUSitter — on-call RCA agent for GPU fleets (real-telemetry grounded)"
requires-python = ">=3.13"
dependencies = [
    "pandas==3.0.3",
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "google-adk==2.3.0",
    "google-genai==2.10.0",
    "httpx==0.28.1",
    "scikit-learn==1.9.0",
    "playwright>=1.50.0",
]

# uv-native dev group: installed by default on `uv sync` (unlike an optional
# extra), so the bare `pytest` console script is present.
[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpusitter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# gpusitter resolves via the (editable) install; repo root on the path lets the
# tests import the repo-level `scripts` package (lfs_helper, precompute) under
# the bare `pytest` console script, not only `python -m pytest`.
pythonpath = ["."]
# -ra: summarize every non-passing outcome. --strict-markers / --strict-config:
# an unregistered marker or an unknown ini key is a hard error, not a silent typo.
addopts = "-ra --strict-markers --strict-config"
# Registered markers (required under --strict-markers). Select a group with
# `-m smoke`; exclude it with `-m 'not smoke'`.
markers = [
    "smoke: fast package-import / wiring sanity checks",
]
# An xfail that unexpectedly passes is a failure, so stale xfails can't hide.
xfail_strict = true
filterwarnings = [
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]

[tool.ruff]
# Single fast tool replacing black/flake8/isort. Python 3.13 baseline.
line-length = 100
target-version = "py313"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
# Sensible default set: pyflakes (F) + pycodestyle (E/W) errors, plus the
# high-signal opinionated families — import sorting (I), modern-syntax
# upgrades (UP), bugbear (B), and comprehension cleanups (C4).
select = ["E", "F", "W", "I", "UP", "B", "C4"]
